# CILISSA

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pypi.yml  quality.yml  release.yml  tests.yml
cilissa/: __init__.py  __main__.py  analyzers.py  classes.py  cli.py  core.py  exceptions.py  helpers.py  images.py  metrics.py  operations.py  parsers.py  results.py  roi.py  transformations.py  transformers.py  utils.py
cilissa-gui/: application.py
cilissa_gui/: README.md  application.py  decorators.py  helpers.py  inputs.py  interface.py  managers.py  meta.py  mixins.py  widgets.py
cilissa_gui/components/: __init__.py  console.py  explorer.py  operations.py  properties.py  workspace.py
cilissa_gui/resources/: __init__.py  resources.py  resources.qrc
cilissa_gui/ui/: interface.py  layout.py
cilissa_gui/ui/components/: __init__.py  console.py  explorer.py  operations.py  properties.py  queue.py  workspace.py
cilissa_gui/widgets/: __init__.py  errors.py  images.py  messages.py  operation.py  operations.py  results.py  roi.py
cilissa_gui/widgets/inputs/: __init__.py  base.py  boolean.py  number.py
docs/: conf.py  examples.rst  index.rst  installation.rst  sphinx-requirements.txt
docs/reference/: _helpers.rst  _images.rst  _metrics.rst  _operations.rst  _parsers.rst  _results.rst  _roi.rst  _transformations.rst  index.rst
scripts/: show_histogram.py
tests/: base.py  test_analysis.py  test_basic.py  test_cli.py  test_operations_list.py  test_operations_queue.py  test_parsers.py  test_roi.py  test_transformation.py
tests/benchmarks/: bench_analysis.py  bench_operations_list.py  bench_transformation.py
tests/data/: README.md  data.json  operations_list.json
tests/data/fastfading/: data.json
tests/data/gblur/: data.json
tests/data/jpeg/: data.json
tests/data/other/: monarch_16bit.tiff  monarch_16bit_float.tiff
tests/data/wnoise/: data.json
tests/matlab/: compare.m  fix_data_json.py  fix_paths.py  metrics.m  ref_image.m
tests/scripts/: metrics.m
