[tool.poetry]
name = "cilissa"
version = "0.4.0"
description = "Interactive tool for assessing digital image similarity"
authors = ["Kamil Marut <kamil.marut@pm.me>"]
readme = "README.md"
homepage = "https://github.com/exler/CILISSA"
repository = "https://github.com/exler/CILISSA"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.20.3"
opencv-python = "^4.5.2"
numba = "^0.53.1"
scipy = "^1.7.0"
matplotlib = "^3.4.2"
PySide6 = { version = "^6.1.2", optional = true }

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
bandit = "^1.7.0"
mypy = "^0.902"
pytest = "^6.2.4"
isort = "^5.8.0"
pyinstaller = "^4.5.1"

[tool.poetry.extras]
gui = ["PySide6"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true
exclude = "(tests|cilissa_gui)"

[tool.isort]
profile = "black"

[tool.black]
extend-exclude = "cilissa_gui/resources"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
