[tool.poetry]
name = "cilissa"
version = "0.7.2"
description = "Interactive tool for assessing digital image similarity"
authors = ["Kamil Marut <kamil@kamilmarut.com>"]
readme = "README.md"
homepage = "https://github.com/exler/CILISSA"
repository = "https://github.com/exler/CILISSA"
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/exler/CILISSA/issues"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.20.3"
opencv-python = "^4.5.2"
PySide6 = { version = "^6.1.2", optional = true }

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
bandit = "^1.7.0"
mypy = "^0.902"
isort = "^5.8.0"
pytest = "^6.2.4"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
pyinstaller = "^4.5.1"
verdandi = "^0.2.3"
Sphinx = "^4.2.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
coverage = "^6.0.2"

[tool.poetry.extras]
gui = ["PySide6"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.poetry.scripts]
cilissa = "cilissa.__main__:main"

[tool.mypy]
ignore_missing_imports = true
exclude = "(tests|docs|cilissa_gui)"

[tool.isort]
profile = "black"

[tool.black]
extend-exclude = "cilissa_gui/resources"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
